--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body{
 	margin:0;
 	padding:0;
 	text-align: left;
+	outline:none;
+	background: #edf2f6;
 }
 
 *{
@@ -12,6 +14,9 @@ body{
 	display:none;
 }
 
+:root {
+	--topbar: #354052;
+}
 
 /* ------------- Global wrapper --------------- */
 
@@ -20,29 +25,67 @@ body{
 	width:100%;
 }
 
-/* ------------- Sidebar --------------- */
+/* ------------- Topbar / Sidebar --------------- */
 
 .topbar{
-	float:left;
+	float:right;
 	width:100%;
-	height: 60px;
-	background-color: #333;
+}
 
+.topbar.top{
+	height: 50px;
+	background-color: #fff;
+}
+
+.topbar.bottom{
+	height: 40px;
+	background-color: var(--topbar);
+}
+
+
+.topbar .logo{
+	float:left;
+	height:45px;
+	width:45px;
+	margin-left:10px;
+	margin-top:3px;
+	cursor: pointer;
 }
 
 
 .top-buttons-container{
 	float: right;
     text-align: center;
-    width: calc(100% - 100px);
+    width: 100%;
     margin-top: 12px;
+}
+
+
+.menu-item{
+	border-bottom:1px solid #fff;
+	background: transparent;
+	color:#fff;
+	padding:7px 10px;
+}
+
+.menu-item:hover{
+	border-top:1px solid #fff;
+	cursor:pointer;
 }
 
 
 /* ------------- Pages --------------*/
 
 .page{
+	background:#fff;
+	width:100%;
+	padding:20px;
 	display: none;
+}
+
+.pages-container{
+	width:80%;
+	margin: 100px auto;
 }
 
 .page.home{
